assets/css/landing.styl
.landing
  overflow hidden
  height 100vh
  display flex
  justify-content center
  align-items center

  video
    background linear-gradient(-229deg, $purple 22%, $blue 100%)
    position fixed
    top 50%
    left 50%
    min-width 100%
    min-height 100%
    width auto
    height auto
    z-index -100
    transform translateX(-50%) translateY(-50%)
    opacity 0.9

  &-callout
    color white

    > h1
      font-size 96px

    > .stripe
      background-color rgba(0, 0, 0, 0.75)
      display inline-block
      height $grid*2
      position absolute
      width 100%
      margin-left $grid*-1
      margin-top -82px
      z-index -1
      animation landing-slide-in-stripe 1.8s ease both

    > p
      background-color rgba(12, 148, 245, 0.75)
      margin 0
      text-align center
      animation fade-in-left 2s ease both

    a
      color white
      text-decoration underline

  &-foot
    &-l
    &-r
      color white
      display flex
      font-size $small-font-size
      padding $unit*2
      position fixed
      bottom 0
      z-index 10

    &-l
      left 0

    &-r
      right 0

  &-actions
    display flex
    justify-content space-between
    width 100%
    perspective 1000px

  &-action
    color white
    flex 1
    display flex
    align-items center
    padding-top $grid
    text-decoration none !important
    animation fade-in-left 1s ease backwards

    &:nth-of-type(1)
      animation-delay 0.2s
    &:nth-of-type(2)
      animation-delay 0.5s
    &:nth-of-type(3)
      animation-delay 0.8s
    &:nth-of-type(4)
      animation-delay 1.2s

    &:hover
      transform rotateY(12deg) rotateX(8deg) rotate(-4deg)

      > span
        opacity 1

    > .icon
      width $grid
      height $grid
      background-size cover
      display inline-block

      &.blog
        background-image url('https://s3-us-west-2.amazonaws.com/lawluk/images/icons/edit-3.svg')

      &.resume
        background-image url('https://s3-us-west-2.amazonaws.com/lawluk/images/icons/file-text.svg')

      &.music
        background-image url('https://s3-us-west-2.amazonaws.com/lawluk/images/icons/music.svg')

      &.contact
        background-image url('https://s3-us-west-2.amazonaws.com/lawluk/images/icons/mail.svg')

    > span
      display block
      opacity 0
      margin-left $unit
      transition 0.2s ease
      text-align center

@media (max-width: 640px)
  .landing
    align-items flex-start
    background linear-gradient(-239deg, $purple 22%, $blue 100%)
    overflow hidden

    &-callout
      padding $grid

      > h1
        font-size 48px
        line-height 1

      > .stripe
        background-color white
        height $grid*4
        margin-top -128px

      > p
        background-color transparent
        color white
        margin $grid $grid*-1

        > span
          display block

      > .mobile-photo
        width $grid*4
        height $grid*4
        border-radius $grid*4
        background-color white
        background-size contain
        background-image url('https://s3-us-west-2.amazonaws.com/lawluk/images/pf.jpg')
        box-shadow 0 2px 4px rgba(0, 0, 0, 0.4)
        margin 0 auto $grid auto
        position relative
        z-index 3
        animation fade-in-down 1s ease both

    &-actions
      flex-direction column
      position absolute
      z-index 2

    &-action
      padding $unit*3 0

      &:hover
        transform rotateY(12deg) rotateX(8deg) rotate(-2deg)

      > span
          opacity 1

    &-foot
      &-l
        display none

    &-mobile-pattern
      background-image url('https://s3-us-west-2.amazonaws.com/lawluk/images/icons/heart.svg')
      height 0
      width 100%
      position absolute
      bottom 0
      right 0
      opacity 0.05
      z-index 1
      animation slide-up 12s ease both
      animation-delay 1s

  video
    display none

@keyframes landing-slide-in-stripe
  from
    transform translateX(2000px)

  to
    transform translateX(0)

@keyframes slide-up
  from
    height 0

  to
    height 100vh

@keyframes fade-in-left
  from
    opacity 0
    transform translateX(-32px)

  to
    opacity 1
    transform translateX(0)

@keyframes fade-in-down
  from
    opacity 0
    transform translateY(-16px)

  to
    opacity 1
    transform translateY(0)

